# math

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build.py  makefile  math.sln  math.sublime-project  math.vcxproj  math.vcxproj.filters
benchmark/: CMakeLists.txt  math-benchmark.cpp
build-support/cmake/: Findbenchmark.cmake  Findcatch.cmake  Findeigen.cmake  Findglm.cmake  targets.cmake
build-support/vs2017/: extra-compile-options.props
include/: akmath.h  vec_math.h
src/: vec_math.h
test/: CMakeLists.txt  catch-output.h  main.c  main.d  math-test-dx.cpp  math-test-glm.cpp  math-test.cpp  math_test.cpp  math_test.d  math_test_c.c  math_test_dx.cpp  math_test_glm.cpp  math_test_gtest.cpp
